# Geant4-Beginner-Course

./: .readthedocs.yml  README.md
applications/final-application/: CMakeLists.txt  Readme.txt  g4Macro.mac  vis.mac  yourMainApplication.cc
applications/final-application/experiment/: g4Macro_Meroli_100MeV_electron_5p6um_Si.mac  gplot.p
applications/final-application/include/: Hist.hh  YourActionInitialization.hh  YourDetectorConstruction.hh  YourDetectorMessenger.hh  YourEventAction.hh  YourPrimaryGeneratorAction.hh  YourRun.hh  YourRunAction.hh  YourRunActionMessenger.hh  YourSteppingAction.hh
applications/final-application/src/: Hist.cc  YourActionInitialization.cc  YourDetectorConstruction.cc  YourDetectorMessenger.cc  YourEventAction.cc  YourPrimaryGeneratorAction.cc  YourRun.cc  YourRunAction.cc  YourRunActionMessenger.cc  YourSteppingAction.cc
applications/intermediate-application/: CMakeLists.txt  README.txt  g4macro.mac  g4macro_vis.mac  vis.mac  yourMainApplication.cc  yourMainApplication_noUI.cc
applications/intermediate-application/inc/: YourActionInitialization.hh  YourDetectorConstruction.hh  YourPrimaryGeneratorAction.hh
applications/intermediate-application/src/: YourActionInitialization.cc  YourDetectorConstruction.cc  YourPrimaryGeneratorAction.cc
applications/preliminaries/cpp-interface/: README.txt  main.cc
course-material/: Doxyfile.in  Makefile_old  requires.txt
course-material/doxygen/xml/: _circle_8hh.xml  _hist_8cc.xml  _hist_8hh.xml  _square_8hh.xml  _v_shape2_d_8hh.xml  _your_action_initialization_8cc.xml  _your_action_initialization_8hh.xml  _your_detector_construction_8cc.xml  _your_detector_construction_8hh.xml  _your_detector_messenger_8cc.xml  _your_detector_messenger_8hh.xml  _your_event_action_8cc.xml  _your_event_action_8hh.xml  _your_primary_generator_action_8cc.xml  _your_primary_generator_action_8hh.xml  _your_run_8cc.xml  _your_run_8hh.xml  _your_run_action_8cc.xml  _your_run_action_8hh.xml  _your_run_action_messenger_8cc.xml  _your_run_action_messenger_8hh.xml  _your_stepping_action_8cc.xml  _your_stepping_action_8hh.xml  class_circle.xml  class_hist.xml  class_square.xml  class_v_shape2_d.xml  class_your_action_initialization.xml  class_your_detector_construction.xml  class_your_detector_messenger.xml  class_your_event_action.xml  class_your_primary_generator_action.xml  class_your_run.xml  class_your_run_action.xml  class_your_run_action_messenger.xml  class_your_stepping_action.xml  classyour_main_application.xml  dir_08be6e1770cf4f179ba7ad469ec388ce.xml  dir_5dc6b9ae77d72ac230f3673375a0db56.xml  dir_601fe879b15c44123c118222dcae4a80.xml  (+25 more)
course-material/source/: conf.py  global.rst  index.rst  last.rst  zzbib.rst
course-material/source/_extensions/: geant4extensions.py
course-material/source/_static/: style.css
slides/Detector/: DetectorConstruction.key
slides/Introduction/: Introduction.key
slides/OptionalUserActionsAndMT/: OptionalUserActionsAndMT.key
slides/PhysicsList/: PhysicsList.key
slides/UI/: UserInterface.key
(+13 files in other folders)
